--- a/TestAPI/Views/Shared/_Layout.cshtml
+++ b/TestAPI/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - TestAPI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - TestAPI - <a href="https://github.com/MohamadQanbour/API_Test" target="_blank">Git Hub</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
